--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,6 @@ jobs:
           java-version: '8'
           cache: 'maven'
 
-      - name: Reset the TTY ownership for GPG
-        run: export GPG_TTY=$(tty)
-
       - name: Release Maven package
         uses: samuelmeuli/action-maven-publish@v1
         with:
@@ -29,3 +26,5 @@ jobs:
           gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
           nexus_username: ${{ secrets.NEXUS_USERNAME }}
           nexus_password: ${{ secrets.NEXUS_PASSWORD }}
+        env:
+          GPG_TTY: $(tty)
