--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <url>https://github.com/spicule-kythera/magnesium-script</url>
     <groupId>uk.co.spicule</groupId>
     <artifactId>magnesium-script</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.7</version>
 
     <!-- License -->
     <licenses>
